Add 5 pages with different background images

--- a/second.html
+++ b/second.html
@@ -8,7 +8,12 @@
     <meta property="og:image" content="https://ichef.bbci.co.uk/news/800/cpsprodpb/AECD/production/_107894744_alien976.jpg">
     <!-- <meta property="og:url" content="http://euro-travel-example.com/index.htm"> -->
     <title>UFO and Extraterrestrials</title>
-    <link rel="stylesheet" href="./css/second.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <style>
+        body{
+            background-image: url('./images/bg_5.png');
+        }
+    </style>
 </head>
 <body class="background-tint" >
     <div class="iframe-container video-container">
