--- a/five.html
+++ b/five.html
@@ -43,7 +43,7 @@
         }
     
         function onPlayerReady(event) {
-            // event.target.mute();
+            event.target.mute();
             event.target.playVideo();
         }
     </script>
