Update meta data for all sites

--- a/second.html
+++ b/second.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="UFO and Extraterrestrials">
-    <meta property="og:description" content="Interesing and shocking revelations about Unidentified Flying Objects and Aliens !">
-    <meta property="og:image" content="https://ichef.bbci.co.uk/news/800/cpsprodpb/AECD/production/_107894744_alien976.jpg">
+    <meta property="og:title" content="UFO Blog Site">
+    <meta property="og:description" content="A well-designed blog website for UFO and space enthusiasts !">
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9CBXmVmQJhbOkCB1encyKwXa7sRFEo6O3Jg&usqp=CAU">
     <!-- <meta property="og:url" content="http://euro-travel-example.com/index.htm"> -->
-    <title>UFO and Extraterrestrials</title>
+    <title>UFO Blog Site</title>
     <link rel="stylesheet" href="./css/index.css">
     <style>
         body{
